syntax = "proto3";

package manager_dictionary;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "manager_dictionary.proto";
import "manager_dictionary_value.proto";


service Service {
  // PageDictionary 获取分页字典信息
  rpc PageDictionary (PageDictionaryRequest) returns (PageDictionaryReply) {
    option (google.api.http) = {
      get: "/manager/v1/dictionaries",
    };
  }

  // AddDictionary 添加字典信息
  rpc AddDictionary (AddDictionaryRequest) returns (AddDictionaryReply) {
    option (google.api.http) = {
      post: "/manager/v1/dictionary",
      body: "*",
    };
  }

  // UpdateDictionary 更新字典信息
  rpc UpdateDictionary (UpdateDictionaryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/manager/v1/dictionary",
      body: "*",
    };
  }

  // DeleteDictionary 删除字典信息
  rpc DeleteDictionary (DeleteDictionaryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/manager/v1/dictionary",
    };
  }

  // PageDictionaryValue 获取分页字典值
  rpc PageDictionaryValue (PageDictionaryValueRequest) returns (PageDictionaryValueReply) {
    option (google.api.http) = {
      get: "/manager/v1/dictionary/values",
    };
  }

  // GetDictionaryValue 获取指定字典值
  rpc GetDictionaryValue (GetDictionaryValueRequest) returns (GetDictionaryValueReply) {
    option (google.api.http) = {
      get: "/manager/v1/dictionary/value",
      additional_bindings:{
        get: "/manager/client/v1/dictionary/value",
      }
    };
  }

  // AddDictionaryValue 删除字典值
  rpc AddDictionaryValue (AddDictionaryValueRequest) returns (AddDictionaryValueReply) {
    option (google.api.http) = {
      post: "/manager/v1/dictionary/value",
      body: "*",
    };
  }

  // UpdateDictionaryValue 更新字典值
  rpc UpdateDictionaryValue (UpdateDictionaryValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/manager/v1/dictionary/value",
      body: "*",
    };
  }

  // DeleteDictionaryValue 删除字典值
  rpc DeleteDictionaryValue (DeleteDictionaryValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/manager/v1/dictionary/value",
    };
  }
}